// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`concat - should concat 1`] = `
Object {
  "jane": "doe",
  "john": "doe",
}
`;

exports[`concat - should deep concat 1`] = `
Object {
  "me": Object {
    "john": "doe",
  },
  "wife": Object {
    "jane": "doe",
  },
}
`;

exports[`concat - should deep override 1`] = `
Object {
  "me": Object {
    "john": "doe awesome",
  },
}
`;

exports[`concat - should override 1`] = `
Object {
  "john": "doe awesome",
}
`;

exports[`concat - should return an empty object 1`] = `Object {}`;

exports[`concat - should return objectOne 1`] = `
Object {
  "john": "doe",
}
`;

exports[`concat - should return objectTwo 1`] = `
Object {
  "jane": "doe",
}
`;
